@@ -2,6 +2,6 @@
 <html>
 <frameset rows="30,*" frameborder="no" framespacing="0" border="0">
 	<frame src="{f:uri.action(action:'menu')}" frameborder="0" noresize="noresize" scrolling="no" />
-	<frame name="viewer" src="{f:uri.action(action:'blank')}" frameborder="0" noresize="noresize" />
+	<frame name="tx-sphinx-documentation-content" src="{f:uri.action(action:'blank')}" frameborder="0" noresize="noresize" />
 </frameset>
 </html>
