@@ -1,0 +1,25 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="{f:uri.resource(path:'Css/Documentation.css')}" />
+</head>
+<body>
+
+<div class="center">
+	<f:image src="EXT:sphinx/Resources/Public/Images/warning.png" alt="" />
+
+	<h1>Oops, extension reST Documentation Viewer (restdoc) is not loaded!</h1>
+
+	<h2>Please install/load it from <a href="#" onclick="jumpToExtensionManager();return false" target="_top">Extension Manager</a></h2>
+</div>
+
+<script type="text/javascript">
+	function jumpToExtensionManager() {
+		//top.TYPO3.ModuleMenu.App.showModule('tools_ExtensionmanagerExtensionmanager');
+		var theUrl = top.TS.PATH_typo3 + 'mod.php?M=tools_ExtensionmanagerExtensionmanager&tx_extensionmanager_tools_extensionmanagerextensionmanager[action]=ter&tx_extensionmanager_tools_extensionmanagerextensionmanager[controller]=List';
+		top.TYPO3.Backend.ContentContainer.setUrl(theUrl);
+	}
+</script>
+
+</body>
+</html>
