@@ -5,8 +5,11 @@
 </head>
 <body>
 
-<div id="book" class="center">
-	<f:image src="EXT:sphinx/Resources/Public/Images/book.png" alt="" />
+<div style="background-color: yellow">
+	<f:format.raw>{toc}</f:format.raw>
+</div>
+<div style="background-color: green">
+	<f:format.raw>{content}</f:format.raw>
 </div>
 
 </body>
