@@ -1,3 +1,7 @@
+2013-05-30  Xavier Perseguers  <xavier@causal.ch>
+
+	* [FEATURE] Basic use of EXT:restdoc to render documentation using JSON output
+
 2013-05-29  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] Add option to change format of the generated documentation
